bases/nzbhydra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra
spec:
  selector:
    matchLabels:
      app: nzbhydra
  template:
    metadata:
      labels:
        app: nzbhydra
    spec:
      containers:
        - name: nzbhydra
          image: linuxserver/nzbhydra
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.5"
            limits:
              memory: "512Mi"
              cpu: "0.75"
          ports:
            - containerPort: 5076
              name: tcp-server
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbhyrda-config
        - name: downloads
          emptyDir: {}
