bases/nzbhydra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra
spec:
  selector:
    app: nzbhydra
  ports:
    - name: tcp
      port: 5076
